# picklepicker

./: .continue-here.md  .coverage  .dockerignore  .env.example  .env.local  .gitignore  AGENTS.md  CHANGELOG.md  CHECKPOINT.md  CHECKPOINT_MVP.md  CHECKPOINT_PROD_HEALTH.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.railway  MVP_LAUNCH_PLAN.md  Makefile  PickleIQ_PRD_v1.0.md  README.md  SITE-INSPECTION-REPORT.md  TODOS.md  VERSION  conftest.py  debug-catalog.mjs  debug-catalog.playwright.ts  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pickleiq-redesign-prompt.md  railway.toml  run-e2e-test.sh  test_firecrawl.py  vercel.json
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: cache.py  db.py  embeddings.py  langfuse_handler.py  logging_config.py  main.py  observability.py  prompts.py  schemas.py
backend/data/: eval_results.json
backend/tests/: conftest.py  test_admin_endpoints.py  test_affiliate_clicks.py  test_agent.py  test_auth_middleware.py  test_cache.py  test_chat_endpoint.py  test_chat_integration.py  test_cors_config.py  test_e2e_chat.py  test_e2e_embeddings.py  test_embedding_service.py  test_embeddings_integration.py  test_eval_gate.py  test_langfuse.py  test_observability.py  test_paddles_endpoints.py  test_price_alert_worker.py  test_price_alerts.py  test_price_history.py  test_price_percentile.py  test_production_readiness.py  test_prompts.py
backend/workers/: price_alert_check.py
pipeline/: AGENTS.md  Dockerfile  extract_all_images.py  pyproject.toml  test_e2e_mock.py  test_e2e_scraper.py  test_image_extraction.py
pipeline/alerts/: freshness.py  telegram.py
pipeline/crawlers/: README.md  base.py  brazil_store.py  dropshot_brasil.py  joola.py  mercado_livre.py  utils.py  validation.py
pipeline/db/: connection.py  connection_test.py  dead_letter_queue.py  dead_letter_queue_test.py  migrate_image_mismatch.py  quality_metrics.py  quality_metrics_test.py  run_migrations.py  schema-updates.sql  schema.sql
pipeline/dedup/: __init__.py  normalizer.py  review.py  review_queue.py  spec_matcher.py
pipeline/embeddings/: __init__.py  batch_embedder.py  document_generator.py
pipeline/migrations/: add_enriched_columns.py
pipeline/scripts/: populate_enriched_data.py
pipeline/tests/: E2E_TEST_README.md  FIRECRAWL_ERROR_HANDLING.md  conftest.py  test_brazil_store_crawler.py  test_brazil_store_scraper.py  test_data_integrity.py  test_dedup_normalizer.py  test_dropshot_brasil_crawler.py  test_dropshot_brasil_scraper.py  test_embeddings.py  test_firecrawl_integration.py  test_mercado_livre_crawler.py  test_mercado_livre_scraper.py  test_mercadolivre_expansion.py  test_spec_matcher.py  test_utils.py
pipeline/utils/: security.py  (+1 more)
(+521 files in other folders)
