[project]
name = "pickleiq-backend"
version = "2.3.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn",
    "pydantic>=2.0",
    "psycopg[binary,pool]>=3.1",
    "structlog>=24.1.0",
    "groq>=0.4.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "respx>=0.20",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
fail_under = 80
